# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2011-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * misultin now accepts incoming requests and can handle compressed requests
    * simple tests exist to use curl for misultin and a python test service
    * C API added

2011-02-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * pgsql, mysql, TokyoTyrant, couchdb, memcached data modules converted
      to the cloudi_job behavior, though the binary responses need work

2011-02-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * python API added with BSD licensed encoding for Erlang term
    * java API added using jinterface encoding
    * uuid module implements version 1 and version 4 based on RFC
    * pg2 changed to use a trie instead of ets (exists as module list_pg)
    * rebar and autoconf build integration added

2011-12-.. Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.0 (alpha) rewrite started
    * trie implementation created

2010-04-10	Michael Truog	<mjtruog [at] gmail (dot) com>

	* CloudI version 0.0.10 (alpha)
	    * add a JSON RPC server for the Cloudi API function calls
		  based on the LShift JSON RPC implementation
		  (http://www.lshift.net/blog/2007/02/17/json-and-json-rpc-for-erlang)
		* add abstract code generation for automatic
		  JSON RPC function call integration
		* update referenced Erlang version to R13B02
		  (to reflect the version currently deployed by faxien)

2010-03-06	Michael Truog   <mjtruog [at] gmail (dot) com>

	* CloudI version 0.0.9 (alpha)
		* bug fixes
			* do not purge the cloud_logger_interface module when
			  changing the logging level
			* prevent a crash when jobs ignore the task size parameter
			  (though the database may die after a severe timeout
			  if results are generated faster than the database can store them,
			  when ignoring the task size and not using load balancing or the